--- a/WaterDepthOverlay/WaterDepthOverlay.csproj
+++ b/WaterDepthOverlay/WaterDepthOverlay.csproj
@@ -12,5 +12,5 @@
 
   <Import Project="..\External\Interfaces\Interfaces.projitems" Label="Shared" />
   <Import Project="..\External\Pathoschild\StardewMods\Common\Common.projitems" Label="Shared" />
-  <Import Project="..\Internal\Common\Internal.Common.projitems" Label="Shared" />
+  <Import Project="..\Internal\Common\Common.projitems" Label="Shared" />
 </Project>
